# back-end-boilerplate

./: docker-compose.yml
cargo_workspace/migrations/: 20221216062621_sidebyside.sql
cargo_workspace/server/: Cargo.toml
cargo_workspace/server/src/: main.rs
cargo_workspace/server/src/filters/app_api/: mod.rs  mutation.rs  query.rs
cargo_workspace/server/src/types/: comparison.rs  mod.rs  photo.rs  user.rs
