[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
db_client = {path = "../db_client"}
env_logger = "0.9"
juniper = "0.15.7"
juniper_warp = "0.7"
shrinkwraprs = "0.3.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.151", features = ["derive"] }
sqlx-core = "0.6.2"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
